force-app/main/default/objects/Community_Package__c/Community_Package__c.object-meta.xml
<CustomObject>
    <description>Defines a contracted installation package for a community. A community may have multiple packages with different scopes, names, and pricing rules.</description>
    <label>Community Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>