force-app/main/default/objects/Community_Package__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive packages are retained for historical reference but cannot be selected on new Work Orders or Quotes.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>