force-app/main/default/objects/Community_Package__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Community Packages</relationshipLabel>
    <relationshipName>Community_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>