force-app/main/default/objects/Community_Package__c/fields/Division_Account__c.field-meta.xml
<CustomField>
    <fullName>Division_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Division (Builder Market) account that owns this community and its packages. Used for reporting and roll-up.</description>
    <label>Division Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Packages (Division)</relationshipLabel>
    <relationshipName>Community_Packages_Division</relationshipName>
    <type>Lookup</type>
</CustomField>