force-app/main/default/objects/Community_Package__c/fields/Mulch_CY__c.field-meta.xml
<CustomField>
    <fullName>Mulch_CY__c</fullName>
    <description>Cubic yards of mulch per lot for this package.</description>
    <label>Mulch (CY)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>