force-app/main/default/objects/Community_Package__c/fields/Pricing_Book__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Active BMG pricing book that governs contracted rates for this package.</description>
    <label>Pricing Book</label>
    <referenceTo>Builder_Pricing_Book__c</referenceTo>
    <relationshipLabel>Community Packages</relationshipLabel>
    <relationshipName>CP_Pricing_Book</relationshipName>
    <type>Lookup</type>
</CustomField>