force-app/main/default/objects/Community_Package__c/fields/Requires_Aqua__c.field-meta.xml
<CustomField>
    <fullName>Requires_Aqua__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Service Ticket Generator creates an Aqua Service Ticket for Work Orders using this package.</description>
    <label>Requires Aqua</label>
    <type>Checkbox</type>
</CustomField>