force-app/main/default/objects/Community_Package__c/fields/Requires_Final_Grading__c.field-meta.xml
<CustomField>
    <fullName>Requires_Final_Grading__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Service Ticket Generator creates a Final Grading Service Ticket scheduled before install.</description>
    <label>Requires Final Grading</label>
    <type>Checkbox</type>
</CustomField>