force-app/main/default/objects/Community_Package__c/fields/Requires_Irrigation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Irrigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Service Ticket Generator creates an Irrigation Service Ticket for Work Orders using this package.</description>
    <label>Requires Irrigation</label>
    <type>Checkbox</type>
</CustomField>