force-app/main/default/objects/Community_Package__c/fields/Requires_Site_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Requires_Site_Readiness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Service Ticket Generator creates a Site Readiness ticket/task before install.</description>
    <label>Requires Site Readiness</label>
    <type>Checkbox</type>
</CustomField>