force-app/main/default/objects/Community_Package__c/fields/Shrub_Count__c.field-meta.xml
<CustomField>
    <fullName>Shrub_Count__c</fullName>
    <label>Shrub Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>