force-app/main/default/objects/Community_Package__c/fields/Sod_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Sod_Sqft__c</fullName>
    <description>Standard sod square footage contracted for lots in this package.</description>
    <label>Sod Sq Ft</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>