force-app/main/default/objects/Community_Package__c/fields/Sod_Type__c.field-meta.xml
<CustomField>
    <fullName>Sod_Type__c</fullName>
    <label>Sod Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Zoysia</fullName>
            </value>
            <value>
                <fullName>Fescue</fullName>
            </value>
            <value>
                <fullName>Centipede</fullName>
            </value>
            <value>
                <fullName>St. Augustine</fullName>
            </value>
            <value>
                <fullName>Bluegrass</fullName>
            </value>
            <value>
                <fullName>Mix</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>